--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
+ Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
-# Ignore all logfiles and tempfiles.
+ Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
 /tmp
+ .jpg
+ .png
